# fakeless-protocol

./: .gitignore  README.md  package.json
contract/: Cargo.toml
contract/src/: lib.rs
contracts/contract/: Cargo.toml  README.md  deploy.md
contracts/contract/src/: lib.rs
contracts/token/: Cargo.toml  compile.js
contracts/token/src/: lib.rs
neardev/: dev-account  dev-account.env
src/: config.js  package-lock.json  package.json
src/src/: App.css  App.tsx  config.ts  utils.ts
src/src/components/: addnews.tsx  header.tsx  navigation.tsx  news.tsx  wallet.tsx
src/src/data/: news.ts
